syntax = "proto3";
package backend;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "messages.proto";

service Backend {
    rpc Register(messages.RegistrationCredentials) returns (google.protobuf.Empty);
    rpc Metrics(messages.SignedMetrics) returns (google.protobuf.Empty);
    rpc NodeData(messages.SignedNodeData) returns (google.protobuf.Empty);
    rpc Logs(messages.SignedLog) returns (google.protobuf.Empty);
    rpc NodeTypeQuery(messages.NodeTypeQuery) returns (messages.NodeType);
    rpc NodeTypeQueries(messages.NodeTypeQueries) returns (messages.NodeTypes);
    rpc NameChange(messages.SignedNameChange) returns (google.protobuf.Empty);
}
